Apply suggestions from code review

--- a/modules/ROOT/pages/runtime-fabric-setup.adoc
+++ b/modules/ROOT/pages/runtime-fabric-setup.adoc
@@ -41,6 +41,6 @@ You must set the property to `false`, as shown in the example to enable header i
 
 == Manage Performance and Data Collection
 
-The agent that Anypoint Visualizer uses to collect metadata may have a performance impact.
+The agent that Anypoint Visualizer uses to collect metadata sometimes has a performance impact.
 
-For more information on data collection and performance, see xref:visualizer::technical.adoc[Manage Performance and Data Collection].
+For more information about data collection and performance, see xref:visualizer::technical.adoc[Manage Performance and Data Collection].
