--- a/modules/ROOT/pages/connection-metrics-compatibility.adoc
+++ b/modules/ROOT/pages/connection-metrics-compatibility.adoc
@@ -42,6 +42,7 @@ Requirements and restrictions:
 If there is a connection from external traffic to a Mule app and also a connection from a Mule app using Mule 4.x to the same app, then the Mule app-to-Mule app edge metric does not appear; rather, it is averaged into the value shown on the edge from external traffic.
 
 Direction: Outbound
+
 Support: Not applicable
 
 === Mule App to a Mule App
@@ -120,7 +121,7 @@ Support: Yes
 
 Requirements and restrictions:
 
-If the source node is a standalone Mule app using Mule 4 and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
+If the source node is a standalone Mule app using Mule 4.x and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
 
 `Inbound metrics may be inaccurate or not appear when the source of the connection is a mule app using Mule runtime version 4.x. Learn how to view connections and their metrics properly.`
 
@@ -187,7 +188,7 @@ Support: Yes
 
 Requirements and restrictions:
 
-If the source node is a Runtime Fabric app using Mule 4 and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
+If the source node is a Runtime Fabric app using Mule 4.x and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
 
 `Inbound metrics may be inaccurate or not appear when the source of the connection is a mule app using Mule runtime version 4.x. Learn how to view connections and their metrics properly.`
 
