--- a/modules/ROOT/pages/visualizer-app-network.adoc
+++ b/modules/ROOT/pages/visualizer-app-network.adoc
@@ -90,7 +90,7 @@ You can search for a node (service) in the *Search services* text field. Service
 
 == View Information About a Connection in Your Network
 
-Depending on if the selected metric is compatible, the canvas will also display metrics on the connections. When you select a connection within the graph, Anypoint Visualizer displays the edge’s metrics details in a card.
+If the selected metric is compatible, the canvas also displays metrics on the connections. When you select a connection within the graph, Anypoint Visualizer displays the edge’s metrics details in a card.
 For more information about which connections support this feature, see xref:connection-level-metrics.adoc[Supported Connection-Level Metrics].
 
 [NOTE]
