--- a/modules/ROOT/pages/connection-metrics-compatibility.adoc
+++ b/modules/ROOT/pages/connection-metrics-compatibility.adoc
@@ -77,135 +77,102 @@ a|
 
 The following connection types and directions support or do not support connection-level metrics, depending on the specified requirements and restrictions.
 
-=== Client App Group to a Mule App
+|===
+| Connection Type | Supported | Requirements and Restrictions
 
-Direction: Inbound
+3+| *Inbound Metrics*
+| Client App Group to a Mule App
+| Yes
+| None
 
-Support: Yes
+| External Traffic to a Mule App
+| Yes
+| If there is a connection from external traffic to a Mule app and also a connection from a Mule app using Mule 4.x to the same app, then the Mule app-to-Mule app edge metric does not appear; rather, it is averaged into the value shown on the edge from external traffic.
 
-Requirements and restrictions: None
-
-Direction: Outbound
-
-Support: Not applicable.
-
-=== External Traffic to a Mule App
-
-Direction: Inbound
-
-Support: Yes
-
-Requirements and restrictions:
-
-If there is a connection from external traffic to a Mule app and also a connection from a Mule app using Mule 4.x to the same app, then the Mule app-to-Mule app edge metric does not appear; rather, it is averaged into the value shown on the edge from external traffic.
-
-Direction: Outbound
-
-Support: Not applicable
-
-=== Mule App to a Mule App
-
-Direction: Inbound
-
-Support: Yes
-
-Requirements and restrictions:
-
-If the source node is a standalone Mule app using Mule 4.x and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
+| Mule App to a Mule App
+| Yes
+| If the source node is a standalone Mule app using Mule 4.x and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
 
 `Inbound metrics may be inaccurate or not appear when the source of the connection is a mule app using Mule runtime version 4.x. Learn how to view connections and their metrics properly.`
 
 Learn more about xref:standalone-mule-setup.adoc#enable-header-injection[enabling the header injection].
 
-Direction: Outbound
+| Mule App to a Non-Mule Node
+| Not applicable
+| None
 
-Support: Yes
+3+| *Outbound Metrics*
 
-Requirements and restrictions:
+| Client App Group to a Mule App
+| Not applicable
+| None
 
-If the dedicated load balancer (DLB) modifies the URL, then metrics are not available for any of the connections passing through the DLB and  the following message appears:
+| External Traffic to a Mule App
+| Not applicable
+| None
+
+| Mule App to a Mule App
+| Yes
+| If the dedicated load balancer (DLB) modifies the URL, then metrics are not available for any of the connections passing through the DLB and  the following message appears:
 
 `Outbound metrics are not available for this connection. Learn more.`
 
 This message also appears if there has not been traffic in the selected time range.
 
-=== Mule App to a Non-Mule Node
+| Mule App to a Non-Mule Node
+| Yes
+| None
 
-Direction: Inbound
-
-Support: Not applicable
-
-Direction: Outbound
-
-Support: Yes
-
-Requirements and restrictions: None
-
+|===
 
 == Runtime Fabric
 
 The following connection types and directions support or do not support connection-level metrics, depending on the specified requirements and restrictions.
 
-=== Client App Group to a Mule App
+|===
+| Connection Type | Supported | Requirements and Restrictions
 
-Direction: Inbound
+3+| *Inbound Metrics*
+| Client App Group to a Mule App
+| Yes
+| None
 
-Support: Yes
+| External Traffic to a Mule App
+| Yes
+| None
 
-Requirements and restrictions: None
-
-Direction: Outbound
-
-Support: Not applicable
-
-=== External Traffic to a Mule App
-
-Direction: Inbound
-
-Support: Yes
-
-Requirements and restrictions: None
-
-Direction: Outbound
-
-Support: Not applicable
-
-=== Mule App to a Mule App
-
-Direction: Inbound
-
-Support: Yes
-
-Requirements and restrictions:
-
-If the source node is a Runtime Fabric app using Mule 4.x and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
+| Mule App to a Mule App
+| Yes
+| If the source node is a Runtime Fabric app using Mule 4.x and you have not enabled the additional header injection, then metrics do not appear on that connection and the following message appears:
 
 `Inbound metrics may be inaccurate or not appear when the source of the connection is a mule app using Mule runtime version 4.x. Learn how to view connections and their metrics properly.`
 
 Learn more about xref:runtime-fabric-setup.adoc#enable-header-injection[enabling the header injection].
 
-Direction: Outbound
+| Mule App to a Non-Mule Node
+| Not applicable
+| None
 
-Support: Yes
+3+| *Outbound Metrics*
 
-Requirements and restrictions:
+| Client App Group to a Mule App
+| Not applicable
+| None
 
-If the dedicated load balancer (DLB) modifies the URL, then metrics are not available for any of the connections passing through the DLB and  the following message appears:
+| External Traffic to a Mule App
+| Not applicable
+| None
+
+| Mule App to a Mule App
+| Yes
+| If the dedicated load balancer (DLB) modifies the URL, then metrics are not available for any of the connections passing through the DLB and  the following message appears:
 
 `Outbound metrics are not available for this connection. Learn more.`
 
 This message also appears if there has not been traffic in the selected time range.
 
-=== Mule App to a Non-Mule Node
+| Mule App to a Non-Mule Node
+| Yes
+| None
 
-Direction: Inbound
-
-Support: Not applicable
-
-Requirements and restrictions: None
-
-Direction: Outbound
-
-Support: Yes
-
-Requirements and restrictions: None
+|===
