--- a/modules/ROOT/pages/runtime-fabric-setup.adoc
+++ b/modules/ROOT/pages/runtime-fabric-setup.adoc
@@ -20,7 +20,7 @@ Anypoint Visualizer relies on a header injection to display connections between 
 == Enable Header Injection
 
 Anypoint Visualizer requires an additional header injection for Anypoint Runtime Fabric deployments. However, due to a potential performance impact in Mule 4, header injection is disabled by default.
-For Runtime Fabric, you must enable the header injection at the app level. You can enable the header injection in the *Properties* tab for an app:
+For Runtime Fabric, you must enable the header injection at the app level:
 
 . Navigate to the *Properties* tab and take one of the following actions:
 * If you have already deployed apps to Runtime Fabric:
