--- a/modules/ROOT/pages/runtime-fabric-setup.adoc
+++ b/modules/ROOT/pages/runtime-fabric-setup.adoc
@@ -19,7 +19,7 @@ Anypoint Visualizer relies on a header injection to display connections between 
 
 == Enable Header Injection
 
-Anypoint Visualizer requires an additional header injection for Anypoint Runtime Fabric deployments. However, due to a potential performance impact in Mule 4, header injection is disabled by default.
+Anypoint Visualizer requires an additional header injection for Anypoint Runtime Fabric deployments. However, due to potential performance impact in Mule 4, header injection is disabled by default.
 For Runtime Fabric, you must enable the header injection at the app level:
 
 . Navigate to the *Properties* tab and take one of the following actions:
@@ -29,7 +29,7 @@ For Runtime Fabric, you must enable the header injection at the app level:
 * If you are deploying an app for the first time, navigate to the deployment page and click *Deploy application*.
 . In the *Properties* tab, set the following property in the app: `anypoint.platform.config.analytics.agent.header_injection.disabled=false`
 
-You must set the property to `false`, as shown in the example to enable header injection, because the property is disabled by default.
+You must set the property to `false` because the property is disabled by default.
 
 == Known Limitations
 
