--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -6,6 +6,9 @@
  ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
  ** xref:technical.adoc[Manage Performance and Data Collection]
 * xref:visualizer-app-network.adoc[Visualizer Application Network]
+ ** xref:architecture-visualization.adoc[Architecture Visualization]
+ ** xref:troubleshooting-visualization.adoc[Troubleshooting Visualization]
+ ** xref:policy-visualization.adoc[Policy Visualization]
 * xref:customize-your-canvas.adoc[Customize the Canvas]
  ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
  ** xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
