--- a/modules/ROOT/pages/use-tags-in-visualizer.adoc
+++ b/modules/ROOT/pages/use-tags-in-visualizer.adoc
@@ -3,9 +3,8 @@ ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 
-You can add tags to an API, application, proxy, or other service. Similar to layers, there are two ways of assigning a tag to a node--by using properties, or through the Runtime Manager UI.
+You can add tags to an application, proxy, or other service. Similar to layers, there are two ways of assigning a tag to a node--by using properties, or through the Anypoint Visualizer UI.
 
-[NOTE]
 If a tag is assigned to an application, the application will appear in every view in which the tags are selected.
 
 == Setting the Tag Through Properties
@@ -19,11 +18,11 @@ In the following example, the tag `project-b` was added through properties and t
 
 image::properties-tags.png[]
 
-== Setting the Tag Through the UI
+== Setting the Tag Through the Architecture Visualization UI
 
 By default, when you first view a node using Anypoint Visualizer, it does not have any tags assigned. You can assign a tag to an existing node using the UI if it does not already have the same tag applied through properties.
 
-. Select the application node to tag. +
+. In the Architecture Visualization, select the application node to tag. +
 You can hold the shift key to select multiple nodes to apply tags to all the selected nodes at once. +
 _Result:_ The *Customization* section for the node appears in the *Details* tab of the node's card as shown in the following image:
 +
@@ -37,7 +36,7 @@ You can either: +
 * Enter a name for a new tag, and click *Create tag <your-tag>*, or
 * Enter a name for the new tag, and press enter. +
 [NOTE]
-You cannot apply the same tag multiple times to a node. All tags are converted to lowercase and cannot have spaces.
+You cannot apply the same tag multiple times to a node. All tags are converted to lowercase.
 +
 image::create-tag.png[]
 +
@@ -51,7 +50,7 @@ To delete a tag assigned using the `anypoint.platform.visualizer.tags=<name>` pr
 
 To delete a tag that was configured in the UI:
 
-. Select a node with the tag you wish to delete.
+. In the Architecture Visualization, select a node with the tag you wish to delete.
 . Locate the tag in the *Customization* section, and click the *X* on the tag to delete.
 
 == See Also
@@ -59,3 +58,4 @@ To delete a tag that was configured in the UI:
 * xref:view.adoc[View Application Information with Anypoint Visualizer]
 * xref:view.adoc#customize-view[Filtering by Tags]
 * xref:layers.adoc[Use Layers in Anypoint Visualizer]
+* xref:architecture-visualization.adoc[Architecture Visualization]
