--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -1,4 +1,4 @@
-= Visualizer Views
+= Define a View
 ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
@@ -18,7 +18,7 @@ Views that you have access to appear in a list in the *View* card (click the dro
 == Defined Views
 
 As a Visualizer editor, you can create views that provide a consistent, high quality source of truth for the architecture of each of your organization's projects.
-Any Visualizer user who has permission for the included environments can see these auto-discoverable views in a drop-down list in the *View* card.
+Any Anypoint Visualizer user who has permission for the included environments can see these auto-discoverable views in a drop-down list in the *View* card.
 Only editors can create, rename, and edit defined views.
 
 These views provide team members with a topological view of the apps that are specific to the areas they are responsible for. Providing a dynamic view for team members ensures their ability to troubleshoot their projects more quickly and easily, and promotes architectural consistency.
