--- a/modules/ROOT/pages/architecture-visualization.adoc
+++ b/modules/ROOT/pages/architecture-visualization.adoc
@@ -13,7 +13,7 @@ When you select a node within the graph, the node and its dependency stack are h
 Anypoint Visualizer displays information about the node in a card. This card is divided into the following tabs:
 
 * *Details*: Provides information about the node.
-* *Customization*: Provides information about the layer to which the node is assigned and the tags assigned to the node. You can xref:(customization)[edit the node's display name] or xref:layers.adoc#[change the layer] and xref:use-tags-in-visualizer.adoc[tags] from this section.
+* *Customization*: Provides information about the layer to which the node is assigned and the tags assigned to the node. You can xref:customize-your-canvas.adoc#display-name[edit the node's display name] or xref:layers.adoc#set-a-layer-ui[change the layer] and xref:use-tags-in-visualizer.adoc[tags] from this section.
 
 == Filtering your View
 
