--- a/modules/ROOT/pages/architecture-visualization.adoc
+++ b/modules/ROOT/pages/architecture-visualization.adoc
@@ -5,7 +5,7 @@ endif::[]
 
 == About the Architecture Visualization
 
-The Architecture Visualization shows the topology of your application network. In this visualization, you can assign change display names of nodes, add tags, and assign nodes to layers. The Architecture Visualization is most useful for documentation and presentation purposes since you can share your network’s architecture without visible metrics.
+The Architecture Visualization shows the topology of your application network. In this visualization, you can change display names of nodes, add tags, and assign nodes to layers. The Architecture Visualization is most useful for documentation and presentation purposes since you can share your network’s architecture without visible metrics.
 
 == View Information about One Service in your Network
 
