--- a/modules/ROOT/pages/policy-visualization.adoc
+++ b/modules/ROOT/pages/policy-visualization.adoc
@@ -25,7 +25,7 @@ When you select multiple policies, the number on the API node represents how man
 
 When you select a node within the graph, the node and its dependency stack are highlighted and all unconnected nodes are unavailable.
 
-In the Policy Visualization, the top card contains information about the Mule app. If the Mule app is an implementation of one or more APIs, cards for each of the APIs will appear below. The card will contain the API, version, and instance names as well as a list of which policies have been applied. The policies are listed in order of application and identified if they are applied at the API level or as automated policies.
+In the Policy Visualization, the top card contains information about the Mule app. If the Mule app is an implementation of one or more APIs, cards for each of the APIs will appear below. The card will contain the API, version, and instance names as well as a list of which policies have been applied. The policies are listed in the order in which they are applied and are identified as either being applied at the API level or as an automated policy.
 
 == Filtering your View
 
